<resources>
	<string name="app_name">Hermes</string>
	<string name="splash_info">Welcome to Hermes.\nA place to chill-out with friends.</string>
	<string name="auth_title">Login</string>
	<string name="auth_info">We\'ll create an account if it doesn\'t already exist.</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="auth_forgot_password">Forgot Password ?</string>
	<string name="auth_sso_title">Or continue with</string>
	<string name="inbox_info">Start up a conversation by selecting the button below</string>
	<string name="select_contact">Select a contact</string>
	<string name="auth_forgot_password_info">No Problem, Enter your email and if it exists with us, we\'ll send an email with instructions.</string>
	<string name="submit">Submit</string>
	<string name="settings">Settings</string>
	<string name="name">Name</string>
	<string name="theme">Theme</string>
	<string name="mode">Mode</string>
	<string name="licenses">Licenses</string>
	<string name="add_contact">New Contact</string>
	<string name="message">Message</string>
	<string name="jan">January</string>
	<string name="feb">February</string>
	<string name="mar">March</string>
	<string name="apr">April</string>
	<string name="may">May</string>
	<string name="jun">June</string>
	<string name="july">July</string>
	<string name="aug">August</string>
	<string name="sept">September</string>
	<string name="oct">October</string>
	<string name="nov">November</string>
	<string name="dec">December</string>
	<string name="default_name">Unknown</string>
	<string name="default_time">Just Now</string>
	<string name="default_message_count">1</string>
	<string name="default_fcm_channel_name">"Hermes Messaging Notification Channel"</string>
	<string name="default_fcm_channel_desc">"A notification channel for the Hermes Messaging App"</string>
	<string name="default_fcm_channel_id">"com.itscryo.Hermes.NotifChannel"</string>



</resources>